almost finished product
Corrected swagger,
small css tweaks
